crates/reinhardt-pages/tests/ui/client_form/choices/fail/missing_default.stderr
error[E0277]: the trait bound `ProviderMode: Default` is not satisfied
 --> tests/ui/client_form/choices/fail/missing_default.rs:3:28
  |
3 | #[derive(Clone, PartialEq, ClientFormChoices)]
  |                            ^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `ProviderMode`
  |
  = note: this error originates in the derive macro `ClientFormChoices` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider annotating `ProviderMode` with `#[derive(Default)]`
  |
4 + #[derive(Default)]
5 | enum ProviderMode {
  |
